--- a/index.html
+++ b/index.html
@@ -1,50 +1,255 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agro Taceli</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Agro Taceli | Soluções Inteligentes para o Agronegócio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap" rel="stylesheet">
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
 
-        body, html {
-            height: 100%;
-            width: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color: #ffffff; /* Fundo branco */
-            font-family: Arial, sans-serif;
-        }
+    body {
+      font-family: 'Roboto', sans-serif;
+      background-color: #f9f9f9;
+      color: #1e1e1e;
+      scroll-behavior: smooth;
+    }
 
-        .container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 100%;
-            height: 100%;
-        }
+    header {
+      background-color: #ffffff;
+      padding: 3rem 2rem;
+      text-align: center;
+    }
 
-        .container img {
-            max-width: 100%;
-            height: auto;
-            max-height: 90vh;
-        }
+    header img {
+      max-width: 350px;
+      margin-bottom: 1rem;
+    }
 
-        @media (max-width: 768px) {
-            .container img {
-                max-width: 90%;
-            }
-        }
-    </style>
+    nav {
+      margin-top: 1rem;
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 1rem;
+    }
+
+    .btn-nav {
+      background-color: #4b9636;
+      color: white;
+      padding: 0.8rem 2rem;
+      border-radius: 8px;
+      font-weight: 500;
+      font-size: 1rem;
+      text-decoration: none;
+      transition: background 0.3s ease;
+      min-width: 120px;
+      text-align: center;
+    }
+
+    .btn-nav:hover {
+      background-color: #3b782a;
+    }
+
+    header h1 {
+      font-size: 2.5rem;
+      color: #4b9636;
+      margin-top: 1rem;
+    }
+
+    header p {
+      font-size: 1.2rem;
+      color: #4a4a4a;
+      font-weight: 300;
+    }
+
+    section {
+      padding: 4rem 2rem;
+      max-width: 1200px;
+      margin: auto;
+    }
+
+    h2 {
+      text-align: center;
+      font-size: 2rem;
+      margin-bottom: 3rem;
+    }
+
+    .title-green {
+      color: #4b9636;
+    }
+
+    .grid-servicos {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 2rem;
+    }
+
+    .card {
+      background-color: #fff;
+      border-radius: 16px;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.08);
+      padding: 2rem;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .card:hover {
+      transform: translateY(-8px);
+      box-shadow: 0 12px 24px rgba(0, 0, 0, 0.1);
+    }
+
+    .card h3 {
+      margin-bottom: 1rem;
+      color: #4b9636;
+      font-size: 1.3rem;
+    }
+
+    .card p {
+      color: #4a4a4a;
+      font-size: 1rem;
+    }
+
+    .bloco {
+      background-color: #4b9636;
+      border-radius: 16px;
+      padding: 3rem 2rem;
+      margin-top: 4rem;
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
+    }
+
+    .bloco h2 {
+      color: #ffffff;
+    }
+
+    .bloco p {
+      font-size: 1.1rem;
+      color: #f1f1f1;
+      line-height: 1.6;
+      text-align: center;
+      max-width: 900px;
+      margin: auto;
+    }
+
+    .contato-info {
+      font-size: 1.1rem;
+      color: #f1f1f1;
+      text-align: center;
+    }
+
+    .contato-info a {
+      color: #c9f7c3;
+      font-weight: bold;
+      text-decoration: none;
+    }
+
+    .contato-info a:hover {
+      text-decoration: underline;
+    }
+
+    footer {
+      background-color: #4b9636;
+      color: white;
+      text-align: center;
+      padding: 2rem;
+      margin-top: 4rem;
+    }
+
+    footer a {
+      color: #c9f7c3;
+      text-decoration: none;
+    }
+
+    footer a:hover {
+      text-decoration: underline;
+    }
+
+    @media (max-width: 768px) {
+      .btn-nav {
+        width: 100%;
+        max-width: 300px;
+      }
+    }
+  </style>
 </head>
+
 <body>
-    <div class="container">
-        <img src="https://img001.prntscr.com/file/img001/qdjOiL8hRcO94HUl_aROlw.png" alt="Imagem Centralizada">
+  <header id="home">
+    <img src="https://i.imgur.com/1t6nAhj.png" alt="Agro Taceli Logo">
+    <nav>
+      <a href="#home" class="btn-nav">Home</a>
+      <a href="#servicos" class="btn-nav">Serviços</a>
+      <a href="#sobre" class="btn-nav">Empresa</a>
+      <a href="#contato" class="btn-nav">Contato</a>
+    </nav>
+  </header>
+
+  <section id="servicos">
+    <h2 class="title-green">Nossos Serviços</h2>
+    <div class="grid-servicos">
+      <div class="card">
+        <h3>Gestão de Redes Sociais</h3>
+        <p>Conteúdo estratégico e presença digital para empresas do agro, com foco em conversão e engajamento.</p>
+      </div>
+      <div class="card">
+        <h3>Criação de Sites</h3>
+        <p>Sites modernos, otimizados e responsivos com foco no mercado agrícola e rural.</p>
+      </div>
+      <div class="card">
+        <h3>Tráfego Pago</h3>
+        <p>Campanhas de mídia paga com retorno mensurável, voltadas ao setor agropecuário.</p>
+      </div>
+      <div class="card">
+        <h3>Branding Agro</h3>
+        <p>Identidade visual impactante e posicionamento estratégico para empresas agroindustriais.</p>
+      </div>
+      <div class="card">
+        <h3>Desenvolvimento de Apps</h3>
+        <p>Aplicativos sob medida para facilitar a gestão e o desempenho no agronegócio.</p>
+      </div>
+      <div class="card">
+        <h3>Banco de Dados Personalizado</h3>
+        <p>Soluções robustas para armazenamento, organização e análise de dados agrícolas e empresariais.</p>
+      </div>
+      <div class="card">
+        <h3>Criptomoedas com Lastro Agro</h3>
+        <p>Projetos de tokenização de ativos do agro para investimento e inovação financeira no campo.</p>
+      </div>
+      <div class="card">
+        <h3>Criação de Gateway de Pagamento</h3>
+        <p>Integração de soluções de pagamento personalizadas para facilitar vendas e cobranças no agro.</p>
+      </div>
+      <div class="card">
+        <h3>Sistemas para o Agronegócio</h3>
+        <p>Plataformas completas e inteligentes para gestão, controle e automação de processos no setor agropecuário.</p>
+      </div>
     </div>
+  </section>
+
+  <section id="sobre" class="bloco">
+    <h2>Sobre a Empresa</h2>
+    <p>
+      A Agro Taceli foi criada com o propósito de suprir a carência de soluções inteligentes voltadas exclusivamente ao agronegócio. Fundada há 15 anos por Jefferson Taceli, atual CEO da empresa, nos tornamos referência nacional em marketing digital para o setor agro. Hoje, temos orgulho de atender mais de 200 empresas que confiam na nossa expertise para alcançar resultados expressivos e duradouros.
+    </p>
+  </section>
+
+  <section id="contato" class="bloco">
+    <h2>Contato</h2>
+    <p class="contato-info">
+      Entre em contato conosco por e-mail: <a href="mailto:contato@agrotaceli.com">contato@agrotaceli.com</a><br><br>
+      Fale diretamente via WhatsApp: <a href="https://wa.me/5500000000000" target="_blank">(00) 00000-0000</a><br><br>
+      Nosso time está pronto para entender seu negócio e oferecer a melhor solução digital para o agro.
+    </p>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 Agro Taceli. Todos os direitos reservados.</p>
+    <p>Contato: <a href="mailto:contato@agrotaceli.com">contato@agrotaceli.com</a></p>
+  </footer>
 </body>
+
 </html>
