--- a/index.html
+++ b/index.html
@@ -240,15 +240,15 @@
   <section id="contato" class="bloco">
     <h2>Contato</h2>
     <p class="contato-info">
-      Entre em contato conosco por e-mail: <a href="mailto:contato@agrotaceli.com">contato@agrotaceli.com</a><br><br>
-      Fale diretamente via WhatsApp: <a href="https://wa.me/5500000000000" target="_blank">(00) 00000-0000</a><br><br>
+      Entre em contato conosco por e-mail: <a href="mailto:contato@agrotaceli.com.br">contato@agrotaceli.com.br</a><br><br>
+      Fale diretamente via WhatsApp: <a href="https://wa.me/5517997818991" target="_blank">(17) 99781-8991</a><br><br>
       Nosso time está pronto para entender seu negócio e oferecer a melhor solução digital para o agro.
     </p>
   </section>
 
   <footer>
     <p>&copy; 2025 Agro Taceli. Todos os direitos reservados.</p>
-    <p>Contato: <a href="mailto:contato@agrotaceli.com">contato@agrotaceli.com</a></p>
+    <p>Contato: <a href="mailto:contato@agrotaceli.com.br">contato@agrotaceli.com.br</a></p>
   </footer>
 </body>
 
