--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Agro Taceli | Soluções Inteligentes para o Agronegócio</title>
+  <title>Agro Taceli | Corretora de Grãos</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap" rel="stylesheet">
   <style>
     * {
@@ -22,7 +22,7 @@
 
     header {
       background-color: #ffffff;
-      padding: 3rem 2rem;
+      padding: 2rem 1rem;
       text-align: center;
     }
 
@@ -31,45 +31,14 @@
       margin-bottom: 1rem;
     }
 
-    nav {
-      margin-top: 1rem;
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 1rem;
-    }
-
-    .btn-nav {
-      background-color: #4b9636;
-      color: white;
-      padding: 0.8rem 2rem;
-      border-radius: 8px;
-      font-weight: 500;
-      font-size: 1rem;
-      text-decoration: none;
-      transition: background 0.3s ease;
-      min-width: 120px;
-      text-align: center;
-    }
-
-    .btn-nav:hover {
-      background-color: #3b782a;
-    }
-
     header h1 {
-      font-size: 2.5rem;
+      font-size: 2rem;
       color: #4b9636;
       margin-top: 1rem;
     }
 
-    header p {
-      font-size: 1.2rem;
-      color: #4a4a4a;
-      font-weight: 300;
-    }
-
     section {
-      padding: 4rem 2rem;
+      padding: 3rem 1rem;
       max-width: 1200px;
       margin: auto;
     }
@@ -77,78 +46,74 @@
     h2 {
       text-align: center;
       font-size: 2rem;
-      margin-bottom: 3rem;
-    }
-
-    .title-green {
+      margin-bottom: 2rem;
       color: #4b9636;
     }
 
-    .grid-servicos {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 2rem;
-    }
-
-    .card {
-      background-color: #fff;
-      border-radius: 16px;
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.08);
-      padding: 2rem;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-    }
-
-    .card:hover {
-      transform: translateY(-8px);
-      box-shadow: 0 12px 24px rgba(0, 0, 0, 0.1);
-    }
-
-    .card h3 {
-      margin-bottom: 1rem;
-      color: #4b9636;
-      font-size: 1.3rem;
-    }
-
-    .card p {
+    .descricao {
+      text-align: center;
+      font-size: 1.1rem;
       color: #4a4a4a;
-      font-size: 1rem;
+      max-width: 900px;
+      margin: auto;
+      margin-bottom: 3rem;
+      line-height: 1.6;
+    }
+
+    .graos {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+      gap: 2rem;
+      text-align: center;
+      align-items: center;
+    }
+
+    .grao {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .grao img {
+      width: 80px;
+      height: auto;
+      margin-bottom: 0.5rem;
+    }
+
+    .grao span {
+      font-weight: 500;
+      color: #333;
+      margin-top: 0.5rem;
     }
 
     .bloco {
-      background-color: #4b9636;
-      border-radius: 16px;
+      background-color: #ffffff;
       padding: 3rem 2rem;
-      margin-top: 4rem;
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
-    }
-
-    .bloco h2 {
-      color: #ffffff;
+      border-radius: 16px;
+      box-shadow: 0 10px 20px rgba(0,0,0,0.08);
+      max-width: 1000px;
+      margin: 4rem auto;
+      text-align: center;
     }
 
     .bloco p {
       font-size: 1.1rem;
-      color: #f1f1f1;
       line-height: 1.6;
-      text-align: center;
-      max-width: 900px;
+      max-width: 850px;
       margin: auto;
+      color: #1e1e1e;
     }
 
-    .contato-info {
-      font-size: 1.1rem;
-      color: #f1f1f1;
-      text-align: center;
-    }
-
-    .contato-info a {
-      color: #c9f7c3;
-      font-weight: bold;
+    .bloco a {
+      display: inline-block;
+      margin-top: 1.5rem;
+      padding: 1rem 2rem;
+      background-color: #25D366;
+      color: white;
+      border-radius: 8px;
       text-decoration: none;
-    }
-
-    .contato-info a:hover {
-      text-decoration: underline;
+      font-weight: bold;
+      font-size: 1.1rem;
     }
 
     footer {
@@ -156,99 +121,52 @@
       color: white;
       text-align: center;
       padding: 2rem;
-      margin-top: 4rem;
-    }
-
-    footer a {
-      color: #c9f7c3;
-      text-decoration: none;
-    }
-
-    footer a:hover {
-      text-decoration: underline;
-    }
-
-    @media (max-width: 768px) {
-      .btn-nav {
-        width: 100%;
-        max-width: 300px;
-      }
     }
   </style>
 </head>
 
 <body>
-  <header id="home">
-    <img src="https://i.imgur.com/1t6nAhj.png" alt="Agro Taceli Logo">
-    <nav>
-      <a href="#home" class="btn-nav">Home</a>
-      <a href="#servicos" class="btn-nav">Serviços</a>
-      <a href="#sobre" class="btn-nav">Empresa</a>
-      <a href="#contato" class="btn-nav">Contato</a>
-    </nav>
+  <header>
+    <img src="https://i.imgur.com/6cyUDtp.png" alt="Logo Agro Taceli">
   </header>
 
-  <section id="servicos">
-    <h2 class="title-green">Nossos Serviços</h2>
-    <div class="grid-servicos">
-      <div class="card">
-        <h3>Gestão de Redes Sociais</h3>
-        <p>Conteúdo estratégico e presença digital para empresas do agro, com foco em conversão e engajamento.</p>
+  <section>
+    <p class="descricao">Somos especialistas na intermediação de negócios no agronegócio. Atuamos com os principais grãos do mercado, conectando produtores e compradores com eficiência, transparência e agilidade.</p>
+    <div class="graos">
+      <div class="grao">
+        <img src="https://i.imgur.com/n8HZgtb.png" alt="Café">
+        <span>Café</span>
       </div>
-      <div class="card">
-        <h3>Criação de Sites</h3>
-        <p>Sites modernos, otimizados e responsivos com foco no mercado agrícola e rural.</p>
+      <div class="grao">
+        <img src="https://i.imgur.com/nr8lJn0.png" alt="Milho">
+        <span>Milho</span>
       </div>
-      <div class="card">
-        <h3>Tráfego Pago</h3>
-        <p>Campanhas de mídia paga com retorno mensurável, voltadas ao setor agropecuário.</p>
+      <div class="grao">
+        <img src="https://i.imgur.com/SR3rBfd.png" alt="Soja">
+        <span>Soja</span>
       </div>
-      <div class="card">
-        <h3>Branding Agro</h3>
-        <p>Identidade visual impactante e posicionamento estratégico para empresas agroindustriais.</p>
-      </div>
-      <div class="card">
-        <h3>Desenvolvimento de Apps</h3>
-        <p>Aplicativos sob medida para facilitar a gestão e o desempenho no agronegócio.</p>
-      </div>
-      <div class="card">
-        <h3>Banco de Dados Personalizado</h3>
-        <p>Soluções robustas para armazenamento, organização e análise de dados agrícolas e empresariais.</p>
-      </div>
-      <div class="card">
-        <h3>Criptomoedas com Lastro Agro</h3>
-        <p>Projetos de tokenização de ativos do agro para investimento e inovação financeira no campo.</p>
-      </div>
-      <div class="card">
-        <h3>Criação de Gateway de Pagamento</h3>
-        <p>Integração de soluções de pagamento personalizadas para facilitar vendas e cobranças no agro.</p>
-      </div>
-      <div class="card">
-        <h3>Sistemas para o Agronegócio</h3>
-        <p>Plataformas completas e inteligentes para gestão, controle e automação de processos no setor agropecuário.</p>
+      <div class="grao">
+        <img src="https://i.imgur.com/0K5SVkr.png" alt="Feijão">
+        <span>Feijão</span>
       </div>
     </div>
   </section>
 
-  <section id="sobre" class="bloco">
-    <h2>Sobre a Empresa</h2>
+  <section class="bloco">
+    <h2>Quem Somos</h2>
     <p>
-      A Agro Taceli foi criada com o propósito de suprir a carência de soluções inteligentes voltadas exclusivamente ao agronegócio. Fundada há 15 anos por Jefferson Taceli, atual CEO da empresa, nos tornamos referência nacional em marketing digital para o setor agro. Hoje, temos orgulho de atender mais de 200 empresas que confiam na nossa expertise para alcançar resultados expressivos e duradouros.
+      A Agro Taceli é uma corretora de grãos com experiência no setor agrícola, especializada na negociação de café, milho, soja e feijão. Nosso compromisso é facilitar o comércio entre produtores e compradores com ética, agilidade e conhecimento de mercado. Atendemos todo o Brasil com foco em resultados e parcerias duradouras.
     </p>
   </section>
 
-  <section id="contato" class="bloco">
-    <h2>Contato</h2>
-    <p class="contato-info">
-      Entre em contato conosco por e-mail: <a href="mailto:contato@agrotaceli.com.br">contato@agrotaceli.com.br</a><br><br>
-      Fale diretamente via WhatsApp: <a href="https://wa.me/5517997818991" target="_blank">(17) 99781-8991</a><br><br>
-      Nosso time está pronto para entender seu negócio e oferecer a melhor solução digital para o agro.
-    </p>
+  <section class="bloco">
+    <h2>Fale Conosco</h2>
+    <p>Estamos prontos para te atender. Entre em contato pelo WhatsApp abaixo:</p>
+    <a href="https://wa.me/5517997818991" target="_blank">(17) 99781-8991</a>
   </section>
 
   <footer>
     <p>&copy; 2025 Agro Taceli. Todos os direitos reservados.</p>
-    <p>Contato: <a href="mailto:contato@agrotaceli.com.br">contato@agrotaceli.com.br</a></p>
   </footer>
 </body>
 
