--- a/index.html
+++ b/index.html
@@ -1,173 +1,457 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-
+<html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Agro Taceli | Corretora de Grãos</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Agro Taceli</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
   <style>
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
+      font-family: 'Poppins', sans-serif;
     }
 
     body {
-      font-family: 'Roboto', sans-serif;
-      background-color: #f9f9f9;
-      color: #1e1e1e;
-      scroll-behavior: smooth;
+      background-color: #f4f4f4;
     }
 
     header {
-      background-color: #ffffff;
-      padding: 2rem 1rem;
-      text-align: center;
-    }
-
-    header img {
-      max-width: 350px;
-      margin-bottom: 1rem;
-    }
-
-    header h1 {
-      font-size: 2rem;
-      color: #4b9636;
-      margin-top: 1rem;
-    }
-
-    section {
-      padding: 3rem 1rem;
-      max-width: 1200px;
-      margin: auto;
-    }
-
-    h2 {
-      text-align: center;
-      font-size: 2rem;
-      margin-bottom: 2rem;
-      color: #4b9636;
-    }
-
-    .descricao {
-      text-align: center;
-      font-size: 1.1rem;
-      color: #4a4a4a;
-      max-width: 900px;
-      margin: auto;
-      margin-bottom: 3rem;
-      line-height: 1.6;
-    }
-
-    .graos {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-      gap: 2rem;
-      text-align: center;
-      align-items: center;
-    }
-
-    .grao {
+      background-color: #275330;
       display: flex;
-      flex-direction: column;
       align-items: center;
+      justify-content: space-between;
+      padding: 10px 40px;
+      height: 120px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+      position: fixed;
+      top: 0;
+      width: 100%;
+      z-index: 1000;
     }
 
-    .grao img {
-      width: 80px;
-      height: auto;
-      margin-bottom: 0.5rem;
+    .logo img {
+      height: 110px;
     }
 
-    .grao span {
-      font-weight: 500;
-      color: #333;
-      margin-top: 0.5rem;
+    nav ul {
+      list-style: none;
+      display: flex;
+      gap: 30px;
     }
 
-    .bloco {
-      background-color: #ffffff;
-      padding: 3rem 2rem;
-      border-radius: 16px;
-      box-shadow: 0 10px 20px rgba(0,0,0,0.08);
-      max-width: 1000px;
-      margin: 4rem auto;
-      text-align: center;
-    }
-
-    .bloco p {
-      font-size: 1.1rem;
-      line-height: 1.6;
-      max-width: 850px;
-      margin: auto;
-      color: #1e1e1e;
-    }
-
-    .bloco a {
-      display: inline-block;
-      margin-top: 1.5rem;
-      padding: 1rem 2rem;
-      background-color: #25D366;
-      color: white;
-      border-radius: 8px;
+    nav ul li a {
       text-decoration: none;
-      font-weight: bold;
-      font-size: 1.1rem;
+      color: #fff;
+      font-weight: 500;
+      padding: 8px 16px;
+      border-radius: 6px;
+      transition: all 0.3s ease;
     }
 
-    footer {
-      background-color: #4b9636;
-      color: white;
+    nav ul li a:hover {
+      background-color: #3b7a4e;
+      color: #ffcc00;
+    }
+
+    .menu-toggle {
+      display: none;
+      flex-direction: column;
+      cursor: pointer;
+    }
+
+    .menu-toggle div {
+      width: 25px;
+      height: 3px;
+      background: #fff;
+      margin: 4px 0;
+    }
+
+    @media (max-width: 768px) {
+      header {
+        height: auto;
+        padding: 10px 20px;
+      }
+
+      nav {
+        position: absolute;
+        top: 120px;
+        right: 0;
+        width: 100%;
+        background-color: #275330;
+      }
+
+      nav ul {
+        flex-direction: column;
+        align-items: flex-end;
+        padding: 20px 40px;
+        display: none;
+      }
+
+      nav ul.active {
+        display: flex;
+      }
+
+      .menu-toggle {
+        display: flex;
+      }
+
+      nav ul li {
+        width: 100%;
+      }
+
+      nav ul li a {
+        display: inline-block;
+        width: auto;
+        padding: 12px 20px;
+        margin-bottom: 8px;
+      }
+    }
+
+    .banner {
+      margin-top: 130px;
+      width: 100%;
+      height: auto;
+    }
+
+    .banner img {
+      width: 100%;
+      height: auto;
+      display: block;
+    }
+
+    .sobre, .atuacao {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 60px 20px;
+    }
+
+    .sobre {
+      background-color: #fff;
+    }
+
+    .atuacao {
+      background-color: #275330;
+    }
+
+    .container {
+      display: flex;
+      flex-wrap: wrap;
+      max-width: 1200px;
+      width: 100%;
+      gap: 40px;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .sobre-texto, .atuacao-texto {
+      flex: 1;
+      min-width: 300px;
+    }
+
+    .sobre-texto h2, .atuacao-texto h2 {
+      font-size: 32px;
+      margin-bottom: 20px;
+    }
+
+    .sobre-texto h2 {
+      color: #275330;
+    }
+
+    .atuacao-texto h2 {
+      color: #fff;
+    }
+
+    .sobre-texto p {
+      font-size: 16px;
+      line-height: 1.6;
+      color: #444;
+      margin-bottom: 15px;
+    }
+
+    .atuacao-texto p {
+      font-size: 16px;
+      line-height: 1.6;
+      color: #e4e4e4;
+      margin-bottom: 15px;
+    }
+
+    .imagem {
+      flex: 1;
+      min-width: 300px;
       text-align: center;
-      padding: 2rem;
+    }
+
+    .imagem img {
+      width: 100%;
+      max-width: 350px;
+      height: auto;
+      border-radius: 10px;
+    }
+
+    @media (max-width: 768px) {
+      .container {
+        flex-direction: column;
+        text-align: left;
+      }
+
+      .imagem {
+        margin-top: 30px;
+      }
+    }
+
+    .faq {
+      background-color: #fff;
+      padding: 60px 20px;
+    }
+
+    .faq-container {
+      max-width: 900px;
+      margin: 0 auto;
+    }
+
+    .faq-container h2 {
+      font-size: 32px;
+      color: #275330;
+      text-align: center;
+      margin-bottom: 40px;
+    }
+
+    .faq-item {
+      margin-bottom: 15px;
+      border-radius: 8px;
+      overflow: hidden;
+    }
+
+    .faq-question {
+      width: 100%;
+      background-color: #275330;
+      color: #fff;
+      font-size: 16px;
+      font-weight: 500;
+      border: none;
+      padding: 15px 20px;
+      text-align: left;
+      cursor: pointer;
+      transition: background 0.3s ease;
+      border-radius: 8px;
+    }
+
+    .faq-question:hover {
+      background-color: #1e4027;
+    }
+
+    .faq-answer {
+      display: none;
+      background-color: #f9f9f9;
+      padding: 15px 20px;
+      color: #444;
+      font-size: 15px;
+      line-height: 1.6;
+      border-left: 4px solid #275330;
+    }
+
+    .faq-item.active .faq-answer {
+      display: block;
+    }
+
+    .rodape {
+      background-color: #275330;
+      color: #fff;
+      padding: 30px 20px;
+      text-align: center;
+      font-size: 15px;
+    }
+
+    .rodape a {
+      color: #fff;
+      text-decoration: underline;
+      margin: 0 5px;
+      transition: color 0.3s;
+    }
+
+    .rodape a:hover {
+      color: #ffcc00;
+    }
+
+    .cookie-banner {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      background-color: #464646;
+      color: #fff;
+      padding: 15px 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      z-index: 9999;
+      flex-wrap: wrap;
+    }
+
+    .cookie-banner p {
+      margin: 0;
+      font-size: 14px;
+      flex: 1;
+    }
+
+    .cookie-banner a {
+      color: #fff;
+      text-decoration: underline;
+    }
+
+    .cookie-banner button {
+      background-color: #07995e;
+      color: #fff;
+      border: none;
+      padding: 10px 20px;
+      font-size: 14px;
+      border-radius: 5px;
+      cursor: pointer;
+      margin-top: 10px;
+    }
+
+    @media (min-width: 600px) {
+      .cookie-banner button {
+        margin-top: 0;
+      }
+    }
+
+    /* BOTÃO WHATSAPP */
+    .whatsapp-button {
+      position: fixed;
+      bottom: 90px;
+      right: 20px;
+      z-index: 9998;
+      width: 60px;
+      height: 60px;
+      cursor: pointer;
+    }
+
+    .whatsapp-button img {
+      width: 100%;
+      height: auto;
+      border-radius: 50%;
+      box-shadow: 0 0 10px rgba(0,0,0,0.2);
+      transition: transform 0.3s ease;
+    }
+
+    .whatsapp-button img:hover {
+      transform: scale(1.1);
     }
   </style>
 </head>
-
 <body>
+
   <header>
-    <img src="https://i.imgur.com/6cyUDtp.png" alt="Logo Agro Taceli">
+    <div class="logo">
+      <img src="https://i.imgur.com/q7HAiYJ.png" alt="Logo Agro Taceli">
+    </div>
+    <div class="menu-toggle" onclick="toggleMenu()">
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    <nav>
+      <ul id="menu">
+        <li><a href="#">Home</a></li>
+        <li><a href="#sobre">Empresa</a></li>
+        <li><a href="#atuacao">Atuação</a></li>
+        <li><a href="#">Parceiros</a></li>
+        <li><a href="https://wa.me/5517997818991?text=Iniciar%20Atendimento">Contato</a></li>
+      </ul>
+    </nav>
   </header>
 
-  <section>
-    <p class="descricao">Somos especialistas na intermediação de negócios no agronegócio. Atuamos com os principais grãos do mercado, conectando produtores e compradores com eficiência, transparência e agilidade.</p>
-    <div class="graos">
-      <div class="grao">
-        <img src="https://i.imgur.com/n8HZgtb.png" alt="Café">
-        <span>Café</span>
+  <section class="banner">
+    <img src="https://i.imgur.com/VTmrZlN.png" alt="Banner Agro Taceli">
+  </section>
+
+  <section class="sobre" id="sobre">
+    <div class="container">
+      <div class="sobre-texto">
+        <h2>Agro Taceli</h2>
+        <p>Com sede própria em Barretos-SP, a Agro Taceli atua como corretora de grãos, especializada na intermediação de compra e venda de produtos e insumos voltados ao agronegócio.</p>
+        <p>Focada nas negociações de feijão, milho, soja e café, a Agro Taceli se destaca como um elo estratégico entre produtores, compradores e distribuidores, contribuindo para o fortalecimento e dinamismo do mercado agrícola nacional.</p>
+        <p>Profissionais do setor contam com a credibilidade, conhecimento técnico e experiência de mercado que a Agro Taceli oferece, garantindo segurança e eficiência em cada transação.</p>
       </div>
-      <div class="grao">
-        <img src="https://i.imgur.com/nr8lJn0.png" alt="Milho">
-        <span>Milho</span>
-      </div>
-      <div class="grao">
-        <img src="https://i.imgur.com/SR3rBfd.png" alt="Soja">
-        <span>Soja</span>
-      </div>
-      <div class="grao">
-        <img src="https://i.imgur.com/0K5SVkr.png" alt="Feijão">
-        <span>Feijão</span>
+      <div class="imagem">
+        <img src="https://i.imgur.com/zxcXtU6.png" alt="Sobre a Agro Taceli">
       </div>
     </div>
   </section>
 
-  <section class="bloco">
-    <h2>Quem Somos</h2>
-    <p>
-      A Agro Taceli é uma corretora de grãos com experiência no setor agrícola, especializada na negociação de café, milho, soja e feijão. Nosso compromisso é facilitar o comércio entre produtores e compradores com ética, agilidade e conhecimento de mercado. Atendemos todo o Brasil com foco em resultados e parcerias duradouras.
-    </p>
+  <section class="atuacao" id="atuacao">
+    <div class="container">
+      <div class="imagem">
+        <img src="https://i.imgur.com/hXTznBL.png" alt="Atuação Agro Taceli">
+      </div>
+      <div class="atuacao-texto">
+        <h2>Atuação</h2>
+        <p>A Agro Taceli atua com forte presença nos estados de São Paulo e Minas Gerais, promovendo conexões comerciais sólidas entre produtores rurais, cooperativas, cerealistas, agroindústrias, moageiros e beneficiadores de grãos.</p>
+        <p>Nosso compromisso vai além da intermediação: oferecemos assessoria comercial, acompanhamento próximo e suporte em todas as etapas da negociação, assegurando transparência, segurança e bom relacionamento entre as partes envolvidas.</p>
+        <p>A Agro Taceli acredita que cada operação bem conduzida contribui para o fortalecimento das parcerias, tornando-as mais consistentes a cada nova safra.</p>
+      </div>
+    </div>
   </section>
 
-  <section class="bloco">
-    <h2>Fale Conosco</h2>
-    <p>Estamos prontos para te atender. Entre em contato pelo WhatsApp abaixo:</p>
-    <a href="https://wa.me/5517997818991" target="_blank">(17) 99781-8991</a>
+  <section class="faq">
+    <div class="faq-container">
+      <h2>Dúvidas Comuns</h2>
+
+      <div class="faq-item">
+        <button class="faq-question">Como vender meus grãos?</button>
+        <div class="faq-answer">
+          <p>Você pode vender seus grãos entrando em contato conosco via WhatsApp. Nossa equipe irá solicitar informações básicas do produto (tipo, volume, local de origem, qualidade) e a partir disso iniciaremos a intermediação junto aos compradores mais adequados.</p>
+        </div>
+      </div>
+
+      <div class="faq-item">
+        <button class="faq-question">Como trabalhar como corretor da Agro Taceli?</button>
+        <div class="faq-answer">
+          <p>Interessados em atuar como corretores parceiros devem entrar em contato via WhatsApp para se cadastrar. É importante possuir conhecimento no setor agrícola e facilidade de comunicação com produtores e compradores.</p>
+        </div>
+      </div>
+
+      <div class="faq-item">
+        <button class="faq-question">Como avaliar meus grãos?</button>
+        <div class="faq-answer">
+          <p>A avaliação básica dos grãos considera umidade, PH, impurezas, peso e qualidade visual. Para uma avaliação mais precisa, recomendamos análise laboratorial e fotos enviadas para nossa equipe via WhatsApp para triagem inicial.</p>
+        </div>
+      </div>
+
+      <div class="faq-item">
+        <button class="faq-question">Como posso falar com a Agro Taceli?</button>
+        <div class="faq-answer">
+          <p>Todo o nosso atendimento é realizado via WhatsApp. Basta nos chamar pelo número informado no site para tirar dúvidas, realizar negociações ou iniciar seu cadastro como parceiro ou fornecedor.</p>
+        </div>
+      </div>
+    </div>
   </section>
 
-  <footer>
-    <p>&copy; 2025 Agro Taceli. Todos os direitos reservados.</p>
+  <footer class="rodape">
+    <div class="rodape-container">
+      <p>SAC: (17) 99781-8991</p>
+      <p>E-mail: <a href="mailto:contato@agrotaceli.com.br">contato@agrotaceli.com.br</a></p>
+      <p>Copyright 2025 - Todos os direitos reservados</p>
+      <p>
+      </p>
+    </div>
   </footer>
+
+  <!-- BOTÃO FLUTUANTE WHATSAPP -->
+  <a href="https://wa.me/5517997818991?text=Iniciar%20Atendimento" target="_blank" class="whatsapp-button">
+    <img src="https://i.imgur.com/wTQgnaR.png" alt="WhatsApp Agro Taceli">
+  </a>
+
+<script>
+function toggleMenu() {
+  const menu = document.getElementById('menu');
+  menu.classList.toggle('active');
+}
+</script>
 </body>
 
 </html>
