--- a/index.html
+++ b/index.html
@@ -452,6 +452,18 @@ function toggleMenu() {
   menu.classList.toggle('active');
 }
 </script>
+
+<script>
+const faqQuestions = document.querySelectorAll('.faq-question');
+
+faqQuestions.forEach(question => {
+  question.addEventListener('click', () => {
+    const faqItem = question.parentElement;
+    faqItem.classList.toggle('active');
+  });
+});
+</script>
 </body>
+
 
 </html>
