--- a/index.html
+++ b/index.html
@@ -367,36 +367,40 @@
   </header>
 
   <section class="banner">
-    <img src="https://i.imgur.com/VTmrZlN.png" alt="Banner Agro Taceli">
+    <img src="https://i.imgur.com/TD8sknp.png" alt="Banner Agro Taceli">
   </section>
 
-  <section class="sobre" id="sobre">
-    <div class="container">
-      <div class="sobre-texto">
-        <h2>Agro Taceli</h2>
-        <p>Com sede própria em Barretos-SP, a Agro Taceli atua como corretora de grãos, especializada na intermediação de compra e venda de produtos e insumos voltados ao agronegócio.</p>
-        <p>Focada nas negociações de feijão, milho, soja e café, a Agro Taceli se destaca como um elo estratégico entre produtores, compradores e distribuidores, contribuindo para o fortalecimento e dinamismo do mercado agrícola nacional.</p>
-        <p>Profissionais do setor contam com a credibilidade, conhecimento técnico e experiência de mercado que a Agro Taceli oferece, garantindo segurança e eficiência em cada transação.</p>
-      </div>
-      <div class="imagem">
-        <img src="https://i.imgur.com/zxcXtU6.png" alt="Sobre a Agro Taceli">
-      </div>
+<section class="sobre" id="sobre">
+  <div class="container">
+    <div class="sobre-texto">
+      <h2>Agro Taceli</h2>
+      <p>Com sede própria em Barretos-SP, a Agro Taceli atua como corretora de grãos e de pecuária, especializada na intermediação de compra e venda de produtos agrícolas, insumos e bovinos, com foco nas raças Nelore e Angus.</p>
+      <p>Focada nas negociações de feijão, milho, soja, café e na corretagem de gado de corte, a Agro Taceli se destaca como um elo estratégico entre produtores, compradores e distribuidores, contribuindo para o fortalecimento e dinamismo do mercado agropecuário nacional.</p>
+      <p>Profissionais do setor contam com a credibilidade, conhecimento técnico e experiência de mercado que a Agro Taceli oferece, garantindo segurança e eficiência em cada transação.</p>
     </div>
-  </section>
+    <div class="imagem">
+      <img src="https://i.imgur.com/nyezcxH.png" alt="Sobre a Agro Taceli">
+    </div>
+  </div>
+</section>
 
-  <section class="atuacao" id="atuacao">
-    <div class="container">
-      <div class="imagem">
-        <img src="https://i.imgur.com/hXTznBL.png" alt="Atuação Agro Taceli">
-      </div>
-      <div class="atuacao-texto">
-        <h2>Atuação</h2>
-        <p>A Agro Taceli atua com forte presença nos estados de São Paulo e Minas Gerais, promovendo conexões comerciais sólidas entre produtores rurais, cooperativas, cerealistas, agroindústrias, moageiros e beneficiadores de grãos.</p>
-        <p>Nosso compromisso vai além da intermediação: oferecemos assessoria comercial, acompanhamento próximo e suporte em todas as etapas da negociação, assegurando transparência, segurança e bom relacionamento entre as partes envolvidas.</p>
-        <p>A Agro Taceli acredita que cada operação bem conduzida contribui para o fortalecimento das parcerias, tornando-as mais consistentes a cada nova safra.</p>
-      </div>
+
+
+<section class="atuacao" id="atuacao">
+  <div class="container">
+    <div class="imagem">
+      <img src="https://i.imgur.com/hXTznBL.png" alt="Atuação Agro Taceli">
     </div>
-  </section>
+    <div class="atuacao-texto">
+      <h2>Atuação</h2>
+      <p>A Agro Taceli atua com forte presença nos estados de São Paulo e Minas Gerais, promovendo conexões comerciais sólidas entre produtores rurais, cooperativas, cerealistas, agroindústrias, moageiros, beneficiadores de grãos e pecuaristas.</p>
+      <p>Nosso compromisso vai além da intermediação de grãos e gado de corte: oferecemos assessoria comercial, acompanhamento próximo e suporte em todas as etapas da negociação, assegurando transparência, segurança e bom relacionamento entre as partes envolvidas.</p>
+      <p>A Agro Taceli acredita que cada operação bem conduzida contribui para o fortalecimento das parcerias, tornando-as mais consistentes e duradouras a cada nova safra e a cada novo ciclo pecuário.</p>
+    </div>
+  </div>
+</section>
+
+
 
   <section class="faq">
     <div class="faq-container">
