--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
 
   <header>
     <div class="logo">
-      <img src="https://i.imgur.com/q7HAiYJ.png" alt="Logo Agro Taceli">
+      <img src="https://i.imgur.com/EpC03O1.png" alt="Logo Agro Taceli">
     </div>
     <div class="menu-toggle" onclick="toggleMenu()">
       <div></div>
@@ -367,7 +367,7 @@
   </header>
 
   <section class="banner">
-    <img src="https://i.imgur.com/TD8sknp.png" alt="Banner Agro Taceli">
+    <img src="https://i.imgur.com/kciwubV.png" alt="Banner Agro Taceli">
   </section>
 
 <section class="sobre" id="sobre">
