--- a/index.html
+++ b/index.html
@@ -368,8 +368,8 @@
 
 <section class="banner">
   <picture>
-    <source media="(max-width: 768px)" srcset="https://i.imgur.com/kiCC2p7.png">
-    <img src="https://i.imgur.com/RFngBjV.png" alt="Banner Agro Taceli">
+    <source media="(max-width: 768px)" srcset="https://i.imgur.com/t5mCZoL.png">
+    <img src="https://i.imgur.com/UZNTCS5.png" alt="Banner Agro Taceli">
   </picture>
 </section>
 
@@ -377,7 +377,7 @@
   <div class="container">
 <div class="sobre-texto">
   <h2>Agro Taceli</h2>
-  <p>Com sede própria em Barretos-SP, a Agro Taceli atua como corretora de grãos, especializada na intermediação de compra e venda de produtos agrícolas e insumos.</p>
+  <p>Com sede própria em Guaíra-SP, a Agro Taceli atua como corretora de grãos, especializada na intermediação de compra e venda de produtos agrícolas e insumos.</p>
   <p>Focada nas negociações de feijão, milho, soja e café, a Agro Taceli se destaca como um elo estratégico entre produtores, compradores e distribuidores, contribuindo para o fortalecimento e dinamismo do mercado agrícola nacional.</p>
   <p>Profissionais do setor contam com a credibilidade, conhecimento técnico e experiência de mercado que a Agro Taceli oferece, garantindo segurança e eficiência em cada transação.</p>
 </div>
