--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Agro Taceli</title>
+  <title>Compra e Venda de Grãos | Feijão, Milho, Soja e Café | Agro Taceli</title>
+  <meta name="description" content="Corretora de grãos em Guaíra-SP especializada na compra e venda de feijão, milho, café e soja. Atendemos produtores, compradores e investidores com transparência, suporte e lucratividade.">
+  <meta name="keywords" content="compra e venda de grãos, corretora de grãos, feijão, milho, café, soja, investimento em grãos, armazenagem, agronegócio, lucros com grãos, Guaíra-SP, corretora agrícola em Guaíra">
+  <meta name="robots" content="index, follow">
+  <meta property="og:title" content="Agro Taceli | Corretora de Grãos e Investimento Agrícola em Guaíra-SP">
+  <meta property="og:description" content="Intermediação de grãos com suporte comercial, estrutura de armazenagem e oportunidades para investidores em Guaíra-SP.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://www.agrotaceli.com.br">
+  <link rel="canonical" href="https://www.agrotaceli.com.br">
    <link rel="icon" href="https://i.imgur.com/q7HAiYJ.png" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
   <style>
@@ -368,8 +376,8 @@
 
 <section class="banner">
   <picture>
-    <source media="(max-width: 768px)" srcset="https://i.imgur.com/t5mCZoL.png">
-    <img src="https://i.imgur.com/UZNTCS5.png" alt="Banner Agro Taceli">
+    <source media="(max-width: 768px)" srcset="https://i.imgur.com/XmcFRr1.png">
+    <img src="https://i.imgur.com/hityKJz.png" alt="Banner Agro Taceli">
   </picture>
 </section>
 
@@ -407,7 +415,22 @@
 
 
 
-  <section class="faq">
+  
+<section class="sobre" id="investimento">
+  <div class="container">
+    <div class="sobre-texto">
+      <h2>Invista em Grãos com a Agro Taceli</h2>
+      <p>Buscando uma forma segura e rentável de investir no agronegócio? A Agro Taceli, sediada em Guaíra-SP, oferece oportunidades exclusivas para investidores interessados em comprar grãos durante a safra, armazenar com infraestrutura própria e vender na entressafra, aproveitando a valorização natural do mercado.</p>
+      <p>Fazemos toda a corretagem, avaliação de mercado, intermediação com produtores e suporte logístico. Você acompanha cada etapa e maximiza seus lucros com segurança e transparência.</p>
+      <p><strong>Invista no futuro do agronegócio com quem entende do mercado em Guaíra e região.</strong></p>
+    </div>
+    <div class="imagem">
+      <img src="https://i.imgur.com/p6Kn7U2.png" alt="Investimento em Grãos em Guaíra-SP">
+    </div>
+  </div>
+</section>
+
+<section class="faq">
     <div class="faq-container">
       <h2>Dúvidas Comuns</h2>
 
