--- a/reportagem.html
+++ b/reportagem.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Grãos viram aposta de investidores: conheça a estratégia que está gerando lucros acima da média</title>
-  <meta name="description" content="Especial: estratégia de armazenagem de grãos atrai investidores de alto padrão com promessas de valorização rápida. Saiba como funciona.">
+  <title>Grãos viram aposta de grandes investidores: estratégia discreta tem gerado retornos acima de 40%</title>
+  <meta name="description" content="Com alta da inflação e instabilidade em ativos tradicionais, investidores de grande porte estão apostando em grãos como alternativa lucrativa. Entenda como funciona.">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap">
   <style>
     body {
@@ -82,32 +82,43 @@
 <body>
   <header>
     <div class="logo-simulada">Notícia Econômica</div>
-    <div class="subtitulo">Reportagem especial sobre investimentos em agronegócio</div>
+    <div class="subtitulo">Especial sobre oportunidades no agronegócio</div>
   </header>
 
   <main class="container">
-    <h1>Grãos viram aposta de investidores: conheça a estratégia que está gerando lucros acima da média</h1>
-    <img src="https://i.imgur.com/CMYsTED.png" alt="Investimento em grãos" class="imagem-topo">
+    <h1>Grãos viram aposta de grandes investidores: estratégia discreta tem gerado retornos acima de 40%</h1>
+    <img src="https://i.imgur.com/CMYsTED.png" alt="Investidor agro observando silos" class="imagem-topo">
 
-    <p>Com a instabilidade dos investimentos tradicionais, um modelo silencioso, mas altamente lucrativo, vem ganhando força entre investidores de médio e alto padrão no Brasil: comprar grãos durante a colheita, armazenar com segurança e vender meses depois com alta valorização.</p>
+    <p>Com a queda da taxa Selic e a instabilidade de ativos tradicionais como imóveis e renda variável, investidores de grande porte estão migrando parte de seus recursos para o agronegócio — em especial, grãos armazenados.</p>
 
-    <p>Para entender como essa estratégia funciona, nossa equipe entrevistou <strong>Renato Silva</strong>, gerente de investimentos da corretora <strong>Agro Taceli</strong>, especializada na intermediação de grãos no interior de São Paulo.</p>
+    <p>A estratégia consiste em comprar grãos diretamente na colheita, quando os preços estão mais baixos, armazená-los com segurança e revendê-los meses depois durante a entressafra, quando a oferta é reduzida e os preços sobem.</p>
 
-    <div class="destaque">
-      "O grão é um ativo físico com mercado consolidado. Comprando na safra, você paga barato. Guardando em estrutura adequada, pode vender na entressafra com valorização de até 50%", explica Renato.
-    </div>
-
-    <h2>Casos reais de valorização</h2>
-    <p>Segundo a Agro Taceli, o milho teve um aumento de 38% entre a safra de verão e o final do segundo semestre de 2024. Já o feijão carioca teve valorização de 45% após três meses armazenado.</p>
-
-    <p>"É como comprar ouro com desconto e vender em época de escassez", resume Renato.</p>
-
-    <h2>Infraestrutura profissional para investidores</h2>
-    <p>Com sede em Guaíra-SP, a Agro Taceli oferece suporte completo: compra do grão diretamente com produtores, armazenagem segura, controle de qualidade e a revenda no melhor momento. Tudo com relatórios e acompanhamento da operação para o investidor.</p>
+    <p>Conversamos com <strong>Renato Silva</strong>, gerente de investimentos da <strong>Agro Taceli</strong>, corretora especializada no setor, com sede em Guaíra-SP.</p>
 
     <div class="destaque">
-      "Nossa missão é levar o investidor urbano para dentro do agronegócio de forma segura, assistida e com rentabilidade realista", diz Renato.
+      “O investidor não precisa conhecer sobre agricultura. Ele aporta capital e recebe relatórios detalhados. Nós cuidamos da operação completa: compra, armazenagem e revenda”, explica Renato.
     </div>
+
+    <h2>Por que os grãos se valorizam?</h2>
+    <p>O mercado agrícola é altamente sazonal. Um mesmo lote de milho, por exemplo, pode custar R$ 55 na colheita e ultrapassar R$ 80 três ou quatro meses depois. A mesma lógica se aplica a feijão, soja e outros grãos.</p>
+
+    <p>Além disso, com a demanda internacional aquecida e variações climáticas imprevisíveis, o valor de ativos agrícolas tem se tornado cada vez mais estratégico.</p>
+
+    <h2>Estudo de caso: investimento de R$ 100 mil em feijão carioca</h2>
+    <p>Um dos clientes da Agro Taceli investiu R$ 100 mil na compra de feijão carioca em fevereiro de 2024. Em junho, o mesmo lote foi revendido com uma valorização de 42%, totalizando um retorno bruto de R$ 142 mil.</p>
+
+    <p>“Esse é o tipo de operação que buscamos repetir com outros investidores, sempre dentro da realidade de mercado e com controle de risco”, explica Renato.</p>
+
+    <h2>Vantagens em relação a outros ativos</h2>
+    <ul>
+      <li>✅ Ativo físico com demanda real e crescente</li>
+      <li>✅ Baixa correlação com a bolsa ou imóveis</li>
+      <li>✅ Proteção natural contra inflação</li>
+      <li>✅ Operação com suporte e relatórios mensais</li>
+    </ul>
+
+    <h2>Segurança jurídica e estrutura</h2>
+    <p>A Agro Taceli opera com contratos formalizados, armazenagem em estruturas profissionais e registros adequados. O investidor pode acompanhar todo o processo de forma transparente.</p>
 
     <h2>Ficou interessado em investir em Grãos?</h2>
     <p>Entre em contato com a Agro Taceli. O investidor não precisa ter conhecimento prévio sobre o mercado de grãos. A Agro Taceli cuida de tudo — momento ideal de compra, armazenamento e momento certo de venda. Tudo com suporte completo, transparência e foco em maximizar os lucros do cliente.</p>
@@ -125,7 +136,7 @@
   </main>
 
   <footer>
-    © 2025 - Conteúdo especial informativo e independente, sem relação com veículos de imprensa oficiais.
+    © 2025 - Conteúdo informativo e independente, sem vínculo com veículos de mídia.
   </footer>
 </body>
 </html>
