--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <meta property="og:title" content="Agro Taceli | Corretora de Grãos e Investimento Agrícola em Barretos-SP">
   <meta property="og:description" content="Intermediação de grãos com suporte comercial, estrutura de armazenagem e oportunidades para investidores em Barretos-SP.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://www.agrotaceli.com.br">
-  <link rel="canonical" href="https://www.agrotaceli.com.br">
-   <link rel="icon" href="https://i.imgur.com/q7HAiYJ.png" type="image/x-icon">
+  <meta property="og:url" content="https://agrotaceli.com.br">
+  <link rel="canonical" href="https://agrotaceli.com.br">
+   <link rel="icon" href="imagens/agro1.png" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
   <style>
     * {
